--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>robertyeates.co.uk by robyeates</title>
+    <title>robertyeates.io by robyeates</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>robertyeates.co.uk</h1>
+        <h1>robertyeates.io</h1>
         <h2></h2>
         <a href="https://github.com/robyeates" class="button"><small>Follow me on</small> GitHub</a>
       </div>
