Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>If you want to get in touch <a href="rob@robertyeates.io">email me</a></p>
+<p>If you want to get in touch email me <a href="mailto:rob@robertyeates.io">rob@robertyeates.io</a></p>
       </section>
     </div>
 
