--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h3>
 <a id="cv" class="anchor" href="#cv" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CV</h3>
 
-<p>Is available from <a href="https://github.com/robyeates/cv/blob/master/Robert_Yeates_CV_Simple_.pdf">GitHub</a></p>
+<p>Is available from <a href="https://github.com/robyeates/robyeates.github.io/blob/master/Robert_Yeates_CV.pdf">GitHub</a></p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
